#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_library(application_injector
    application_injector.cpp
    )
target_link_libraries(application_injector
    Boost::Boost.DI
    runtime_wavm
    account_nonce_api
    address_publisher
    api
    app_config
    app_state_manager
    authority_discovery_api
    print_chain_info_mode
    assets
    authority_manager
    babe
    storage
    babe_api
    babe_lottery
    babe_config_repository
    synchronizer
    binaryen_executor_factory
    binaryen_runtime_external_interface
    binaryen_wasm_memory
    binaryen_wasm_memory_factory
    binaryen_wasm_module
    module_repository
    binaryen_module_factory
    bip39_provider
    block_announce_protocol
    block_appender
    block_builder_api
    block_executor
    block_header_repository
    block_storage
    block_tree
    block_validator
    clock
    chain_spec
    core_api
    crypto_store
    digest_tracker
    ecdsa_provider
    ed25519_provider
    environment
    extrinsic_observer
    transaction_pool
    host_api_factory
    kagome_router
    kagome_router
    key_file_storage
    log_configurator
    metadata_api
    metrics
    metrics_watcher
    outcome
    p2p::p2p
    p2p::p2p_identify
    p2p::p2p_kademlia
    p2p::p2p_ping
    parachain_host_api
    pbkdf2_provider
    peer_manager
    propagate_transactions_protocol
    proposer
    protocol_factory
    runtime_upgrade_tracker
    runtime_environment_factory
    runtime_properties_cache
    executor
    secp256k1_provider
    soralog::fallback_configurator
    soralog::soralog
    sr25519_provider
    state_protocol_observer
    storage_code_provider
    sync_protocol_observer
    telemetry
    tagged_transaction_queue_api
    transaction_payment_api
    transaction_pool
    trie_storage_provider
    vrf_provider
    waitable_timer
    authority_manager
    peer_manager
    assets
    block_announce_protocol
    propagate_transactions_protocol
    grandpa_protocol
    grandpa_api
    grandpa
    protocol_factory
    p2p::p2p_loopback_stream
    grandpa_transmitter
    block_announce_transmitter
    transactions_transmitter
    offchain_worker_factory
    offchain_worker_pool
    offchain_worker_api
    offchain_persistent_storage
    offchain_local_storage
    reputation_repository
    session_keys_api
    collation_protocol
    req_collation_protocol
    validator_parachain
    fd_limit
    )

add_custom_command(TARGET application_injector
    POST_BUILD
    COMMAND find ${CMAKE_CURRENT_BINARY_DIR} -name "*.o" -type f -delete
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Removing object files from '${CMAKE_CURRENT_BINARY_DIR}'"
)
