#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_library(application_injector
    application_injector.cpp
    )
target_link_libraries(application_injector
    Boost::Boost.DI
    runtime_wavm
    account_nonce_api
    address_publisher
    api
    app_config
    app_state_manager
    authority_discovery_api
    print_chain_info_mode
    assets
    storage
    babe_api
    binaryen_executor_factory
    binaryen_runtime_external_interface
    binaryen_wasm_memory
    binaryen_wasm_memory_factory
    binaryen_wasm_module
    module_repository
    binaryen_module_factory
    bip39_provider
    block_builder_api
    consensus
    blockchain
    clock
    chain_spec
    core_api
    crypto_store
    ecdsa_provider
    ed25519_provider
    transaction_pool
    host_api_factory
    key_file_storage
    log_configurator
    metadata_api
    metrics
    metrics_watcher
    outcome
    p2p::p2p
    p2p::p2p_identify
    p2p::p2p_kademlia
    p2p::p2p_ping
    parachain_host_api
    pbkdf2_provider
    block_builder
    runtime_upgrade_tracker
    runtime_environment_factory
    runtime_properties_cache
    executor
    secp256k1_provider
    soralog::fallback_configurator
    soralog::soralog
    sr25519_provider
    network
    storage_code_provider
    telemetry
    tagged_transaction_queue_api
    transaction_payment_api
    transaction_pool
    trie_storage_provider
    vrf_provider
    waitable_timer
    assets
    grandpa_api
    p2p::p2p_loopback_stream
    offchain_worker_factory
    offchain_worker_pool
    offchain_worker_api
    offchain_persistent_storage
    offchain_local_storage
    session_keys_api
    validator_parachain
    fd_limit
    )

add_custom_command(TARGET application_injector
    POST_BUILD
    COMMAND find ${CMAKE_CURRENT_BINARY_DIR} -name "*.o" -type f -delete
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Removing object files from '${CMAKE_CURRENT_BINARY_DIR}'"
)
