#
# Copyright Quadrivium LLC
# All Rights Reserved
# SPDX-License-Identifier: Apache-2.0
#

add_library(application_injector
    application_injector.cpp
    )
target_link_libraries(application_injector
    Boost::Boost.DI
    runtime_wavm
    account_nonce_api
    address_publisher
    api
    app_config
    app_state_manager
    application_modes
    assets
    assets
    authority_discovery_api
    babe_api
    beefy_api
    binaryen_executor_factory
    binaryen_module_factory
    binaryen_runtime_external_interface
    binaryen_wasm_memory
    binaryen_wasm_memory_factory
    binaryen_wasm_module
    bip39_provider
    block_builder
    block_builder_api
    blockchain
    chain_spec
    clock
    consensus
    core_api
    crypto_store
    dispute_coordinator
    ecdsa_provider
    ed25519_provider
    executor
    executor
    fd_limit
    filesystem
    grandpa_api
    host_api_factory
    kagome_benchmarks
    key_file_storage
    log_configurator
    metadata_api
    metrics
    metrics_watcher
    mmr_api
    module_repository
    network
    offchain_local_storage
    offchain_persistent_storage
    offchain_worker_api
    offchain_worker_factory
    offchain_worker_pool
    outcome
    p2p::p2p
    p2p::p2p_identify
    p2p::p2p_kademlia
    p2p::p2p_loopback_stream
    p2p::p2p_ping
    parachain_host_api
    pbkdf2_provider
    recovery_mode
    runtime_properties_cache
    runtime_upgrade_tracker
    secp256k1_provider
    session_keys_api
    soralog::fallback_configurator
    soralog::soralog
    sr25519_provider
    storage
    storage_code_provider
    tagged_transaction_queue_api
    telemetry
    timeline
    transaction_payment_api
    transaction_pool
    transaction_pool
    trie_storage_provider
    validator_parachain
    vrf_provider
    waitable_timer
    assets
    grandpa_api
    p2p::p2p_loopback_stream
    offchain_worker_factory
    offchain_worker_pool
    offchain_worker_api
    offchain_persistent_storage
    offchain_local_storage
    session_keys_api
    validator_parachain
    fd_limit
    recovery_mode
    dispute_coordinator
    )
kagome_clear_objects(application_injector)
